sdk/burdock/query/sql/parser/SqlSmallParser.py
# Generated from SqlSmall.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SqlSmallParser ( Parser ):

    grammarFileName = "SqlSmall.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "')'", "','", "'.'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<=>'", "'<>'", "'!='", "'<'", "<INVALID>", 
                     "'>'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'~'", "'&'", "'|'", "'||'", "'^'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'/**/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ABS", "ACOS", "ALL", "AND", 
                      "ANTI", "AS", "ASC", "ASIN", "ATAN", "AVG", "BETWEEN", 
                      "BY", "CASE", "CEILING", "CHOOSE", "COS", "COT", "COUNT", 
                      "CROSS", "DEGREES", "DENSE_RANK", "DESC", "DISTINCT", 
                      "DIV", "ELSE", "END", "EXP", "FALSE", "FLOOR", "FROM", 
                      "FULL", "GROUP", "HAVING", "IF", "IIF", "IN", "INNER", 
                      "INTERSECT", "IS", "JOIN", "LEFT", "LOG", "LOG10", 
                      "MAX", "MIN", "NEWID", "NOT", "NULL", "NUMERIC", "ON", 
                      "OR", "ORDER", "OUTER", "OVER", "PARTITION", "PERCENTILE_CONT", 
                      "PERCENTILE_DISC", "PI", "POWER", "RAND", "RANDOM", 
                      "RANK", "RIGHT", "ROUND", "ROW_NUMBER", "SELECT", 
                      "SEMI", "SIGN", "SIN", "SORT", "SQL", "SQRT", "SQUARE", 
                      "STD", "STDDEV", "SUM", "TAN", "THEN", "TRUE", "UNION", 
                      "USING", "VAR", "VARIANCE", "WHEN", "WHERE", "EQ", 
                      "NSEQ", "NEQ", "NEQJ", "LT", "LTE", "GT", "GTE", "PLUS", 
                      "MINUS", "ASTERISK", "SLASH", "PERCENT", "TILDE", 
                      "AMPERSAND", "PIPE", "CONCAT_PIPE", "HAT", "STRING", 
                      "INTEGER_VALUE", "DECIMAL_VALUE", "QN2", "QN3", "IDENT", 
                      "IDENTIFIER", "ESCAPED_IDENTIFIER", "LETTER", "SIMPLE_COMMENT", 
                      "BRACKETED_EMPTY_COMMENT", "BRACKETED_COMMENT", "WS", 
                      "SPACE" ]

    RULE_batch = 0
    RULE_query = 1
    RULE_subquery = 2
    RULE_expressionSubquery = 3
    RULE_selectClause = 4
    RULE_fromClause = 5
    RULE_whereClause = 6
    RULE_aggregationClause = 7
    RULE_havingClause = 8
    RULE_orderClause = 9
    RULE_joinRelation = 10
    RULE_joinType = 11
    RULE_joinCriteria = 12
    RULE_sortItem = 13
    RULE_setQuantifier = 14
    RULE_relation = 15
    RULE_relationPrimary = 16
    RULE_caseExpression = 17
    RULE_namedExpression = 18
    RULE_namedExpressionSeq = 19
    RULE_whenExpression = 20
    RULE_expression = 21
    RULE_allExpression = 22
    RULE_literal = 23
    RULE_booleanExpression = 24
    RULE_predicate = 25
    RULE_comparisonOperator = 26
    RULE_booleanValue = 27
    RULE_functionExpression = 28
    RULE_bareFunction = 29
    RULE_rankingFunction = 30
    RULE_roundFunction = 31
    RULE_powerFunction = 32
    RULE_rankingFunctionName = 33
    RULE_aggregateFunctionName = 34
    RULE_mathFunctionName = 35
    RULE_bareFunctionName = 36
    RULE_overClause = 37
    RULE_aliasedSubquery = 38
    RULE_aliasedTableOrSubquerySeq = 39
    RULE_aliasedTableSeq = 40
    RULE_aliasedTableName = 41
    RULE_qualifiedTableName = 42
    RULE_qualifiedColumnName = 43
    RULE_identifier = 44
    RULE_number = 45

    ruleNames =  [ "batch", "query", "subquery", "expressionSubquery", "selectClause", 
                   "fromClause", "whereClause", "aggregationClause", "havingClause", 
                   "orderClause", "joinRelation", "joinType", "joinCriteria", 
                   "sortItem", "setQuantifier", "relation", "relationPrimary", 
                   "caseExpression", "namedExpression", "namedExpressionSeq", 
                   "whenExpression", "expression", "allExpression", "literal", 
                   "booleanExpression", "predicate", "comparisonOperator", 
                   "booleanValue", "functionExpression", "bareFunction", 
                   "rankingFunction", "roundFunction", "powerFunction", 
                   "rankingFunctionName", "aggregateFunctionName", "mathFunctionName", 
                   "bareFunctionName", "overClause", "aliasedSubquery", 
                   "aliasedTableOrSubquerySeq", "aliasedTableSeq", "aliasedTableName", 
                   "qualifiedTableName", "qualifiedColumnName", "identifier", 
                   "number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    ABS=6
    ACOS=7
    ALL=8
    AND=9
    ANTI=10
    AS=11
    ASC=12
    ASIN=13
    ATAN=14
    AVG=15
    BETWEEN=16
    BY=17
    CASE=18
    CEILING=19
    CHOOSE=20
    COS=21
    COT=22
    COUNT=23
    CROSS=24
    DEGREES=25
    DENSE_RANK=26
    DESC=27
    DISTINCT=28
    DIV=29
    ELSE=30
    END=31
    EXP=32
    FALSE=33
    FLOOR=34
    FROM=35
    FULL=36
    GROUP=37
    HAVING=38
    IF=39
    IIF=40
    IN=41
    INNER=42
    INTERSECT=43
    IS=44
    JOIN=45
    LEFT=46
    LOG=47
    LOG10=48
    MAX=49
    MIN=50
    NEWID=51
    NOT=52
    NULL=53
    NUMERIC=54
    ON=55
    OR=56
    ORDER=57
    OUTER=58
    OVER=59
    PARTITION=60
    PERCENTILE_CONT=61
    PERCENTILE_DISC=62
    PI=63
    POWER=64
    RAND=65
    RANDOM=66
    RANK=67
    RIGHT=68
    ROUND=69
    ROW_NUMBER=70
    SELECT=71
    SEMI=72
    SIGN=73
    SIN=74
    SORT=75
    SQL=76
    SQRT=77
    SQUARE=78
    STD=79
    STDDEV=80
    SUM=81
    TAN=82
    THEN=83
    TRUE=84
    UNION=85
    USING=86
    VAR=87
    VARIANCE=88
    WHEN=89
    WHERE=90
    EQ=91
    NSEQ=92
    NEQ=93
    NEQJ=94
    LT=95
    LTE=96
    GT=97
    GTE=98
    PLUS=99
    MINUS=100
    ASTERISK=101
    SLASH=102
    PERCENT=103
    TILDE=104
    AMPERSAND=105
    PIPE=106
    CONCAT_PIPE=107
    HAT=108
    STRING=109
    INTEGER_VALUE=110
    DECIMAL_VALUE=111
    QN2=112
    QN3=113
    IDENT=114
    IDENTIFIER=115
    ESCAPED_IDENTIFIER=116
    LETTER=117
    SIMPLE_COMMENT=118
    BRACKETED_EMPTY_COMMENT=119
    BRACKETED_COMMENT=120
    WS=121
    SPACE=122

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class BatchContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.QueryContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.QueryContext,i)


        def EOF(self):
            return self.getToken(SqlSmallParser.EOF, 0)

        def getRuleIndex(self):
            return SqlSmallParser.RULE_batch

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBatch" ):
                listener.enterBatch(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBatch" ):
                listener.exitBatch(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBatch" ):
                return visitor.visitBatch(self)
            else:
                return visitor.visitChildren(self)




    def batch(self):

        localctx = SqlSmallParser.BatchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_batch)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.query()
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 93
                    self.match(SqlSmallParser.T__0)
                    self.state = 94
                    self.query() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.T__0:
                self.state = 100
                self.match(SqlSmallParser.T__0)


            self.state = 103
            self.match(SqlSmallParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = SqlSmallParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.selectClause()
            self.state = 106
            self.fromClause()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 107
                self.whereClause()


            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 110
                self.aggregationClause()


            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 113
                self.havingClause()


            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 116
                self.orderClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectClause(self):
            return self.getTypedRuleContext(SqlSmallParser.SelectClauseContext,0)


        def fromClause(self):
            return self.getTypedRuleContext(SqlSmallParser.FromClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(SqlSmallParser.WhereClauseContext,0)


        def aggregationClause(self):
            return self.getTypedRuleContext(SqlSmallParser.AggregationClauseContext,0)


        def havingClause(self):
            return self.getTypedRuleContext(SqlSmallParser.HavingClauseContext,0)


        def orderClause(self):
            return self.getTypedRuleContext(SqlSmallParser.OrderClauseContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_subquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubquery" ):
                listener.enterSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubquery" ):
                listener.exitSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubquery" ):
                return visitor.visitSubquery(self)
            else:
                return visitor.visitChildren(self)




    def subquery(self):

        localctx = SqlSmallParser.SubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_subquery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SqlSmallParser.T__1)
            self.state = 120
            self.selectClause()
            self.state = 121
            self.fromClause()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.WHERE:
                self.state = 122
                self.whereClause()


            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.GROUP:
                self.state = 125
                self.aggregationClause()


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.HAVING:
                self.state = 128
                self.havingClause()


            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ORDER:
                self.state = 131
                self.orderClause()


            self.state = 134
            self.match(SqlSmallParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionSubqueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subquery(self):
            return self.getTypedRuleContext(SqlSmallParser.SubqueryContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_expressionSubquery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionSubquery" ):
                listener.enterExpressionSubquery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionSubquery" ):
                listener.exitExpressionSubquery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionSubquery" ):
                return visitor.visitExpressionSubquery(self)
            else:
                return visitor.visitChildren(self)




    def expressionSubquery(self):

        localctx = SqlSmallParser.ExpressionSubqueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expressionSubquery)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.subquery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SqlSmallParser.SELECT, 0)

        def namedExpressionSeq(self):
            return self.getTypedRuleContext(SqlSmallParser.NamedExpressionSeqContext,0)


        def setQuantifier(self):
            return self.getTypedRuleContext(SqlSmallParser.SetQuantifierContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_selectClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectClause" ):
                listener.enterSelectClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectClause" ):
                listener.exitSelectClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectClause" ):
                return visitor.visitSelectClause(self)
            else:
                return visitor.visitChildren(self)




    def selectClause(self):

        localctx = SqlSmallParser.SelectClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_selectClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(SqlSmallParser.SELECT)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SqlSmallParser.ALL or _la==SqlSmallParser.DISTINCT:
                self.state = 139
                self.setQuantifier()


            self.state = 142
            self.namedExpressionSeq()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FromClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(SqlSmallParser.FROM, 0)

        def relation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SqlSmallParser.RelationContext)
            else:
                return self.getTypedRuleContext(SqlSmallParser.RelationContext,i)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_fromClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFromClause" ):
                listener.enterFromClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFromClause" ):
                listener.exitFromClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFromClause" ):
                return visitor.visitFromClause(self)
            else:
                return visitor.visitChildren(self)




    def fromClause(self):

        localctx = SqlSmallParser.FromClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fromClause)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SqlSmallParser.FROM)
            self.state = 145
            self.relation()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SqlSmallParser.T__3:
                self.state = 146
                self.match(SqlSmallParser.T__3)
                self.state = 147
                self.relation()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(SqlSmallParser.WHERE, 0)

        def booleanExpression(self):
            return self.getTypedRuleContext(SqlSmallParser.BooleanExpressionContext,0)


        def getRuleIndex(self):
            return SqlSmallParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = SqlSmallParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(SqlSmallParser.WHERE)
            self.state = 154
            self.booleanExpression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AggregationClauseContext(ParserRuleContext):
